// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Community form should ask when redirecting from form with data (even if submit failed) 1`] = `
<StandardPage
  title="Add a missing community"
>
  <ConfirmDiscardFormChanges
    dirty={true}
    submitSucceeded={false}
  >
    <form>
      <NavigationDialogBox
        when={true}
      />
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <ForwardRef(Grid)
            item={true}
            xs={12}
          >
            <StandardCard
              help={Object {}}
              title="Community details"
            >
              <ForwardRef(Grid)
                container={true}
                spacing={3}
              >
                <ForwardRef(Grid)
                  item={true}
                  xs={12}
                >
                  <Field
                    autoFocus={true}
                    component={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "propTypes": Object {
                          "FormHelperTextProps": [Function],
                          "InputLabelProps": [Function],
                          "InputProps": [Function],
                          "SelectProps": [Function],
                          "autoComplete": [Function],
                          "autoFocus": [Function],
                          "children": [Function],
                          "className": [Function],
                          "classes": [Function],
                          "color": [Function],
                          "defaultValue": [Function],
                          "disabled": [Function],
                          "error": [Function],
                          "fullWidth": [Function],
                          "help": [Function],
                          "helperText": [Function],
                          "id": [Function],
                          "inputProps": [Function],
                          "inputRef": [Function],
                          "label": [Function],
                          "margin": [Function],
                          "maxRows": [Function],
                          "minRows": [Function],
                          "multiline": [Function],
                          "name": [Function],
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "placeholder": [Function],
                          "required": [Function],
                          "rows": [Function],
                          "select": [Function],
                          "size": [Function],
                          "sx": [Function],
                          "textFieldId": [Function],
                          "type": [Function],
                          "value": [Function],
                          "variant": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    fullWidth={true}
                    label="Title of community"
                    name="rek_title"
                    placeholder="Type a title for this community"
                    required={true}
                    textFieldId="rek-title"
                    type="text"
                    validate={
                      Array [
                        [Function],
                      ]
                    }
                  />
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                  xs={12}
                >
                  <Field
                    component={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "propTypes": Object {
                          "FormHelperTextProps": [Function],
                          "InputLabelProps": [Function],
                          "InputProps": [Function],
                          "SelectProps": [Function],
                          "autoComplete": [Function],
                          "autoFocus": [Function],
                          "children": [Function],
                          "className": [Function],
                          "classes": [Function],
                          "color": [Function],
                          "defaultValue": [Function],
                          "disabled": [Function],
                          "error": [Function],
                          "fullWidth": [Function],
                          "help": [Function],
                          "helperText": [Function],
                          "id": [Function],
                          "inputProps": [Function],
                          "inputRef": [Function],
                          "label": [Function],
                          "margin": [Function],
                          "maxRows": [Function],
                          "minRows": [Function],
                          "multiline": [Function],
                          "name": [Function],
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "placeholder": [Function],
                          "required": [Function],
                          "rows": [Function],
                          "select": [Function],
                          "size": [Function],
                          "sx": [Function],
                          "textFieldId": [Function],
                          "type": [Function],
                          "value": [Function],
                          "variant": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    fullWidth={true}
                    label="Community description"
                    multiline={true}
                    name="rek_description"
                    placeholder="Type a description of this community."
                    required={true}
                    rows={5}
                    textFieldId="rek-description"
                    validate={
                      Array [
                        [Function],
                      ]
                    }
                  />
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                  xs={12}
                >
                  <ForwardRef(Typography)>
                    Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                  </ForwardRef(Typography)>
                  <Field
                    ListEditorForm={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": [Function],
                      }
                    }
                    component={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": [Function],
                      }
                    }
                    listEditorId="rek-keywords"
                    locale={
                      Object {
                        "form": Object {
                          "locale": Object {
                            "addButtonLabel": "Add",
                            "id": "keywords-input",
                            "inputFieldHint": "Type keywords",
                            "inputFieldLabel": "Keywords",
                          },
                        },
                        "header": Object {
                          "locale": Object {
                            "deleteAll": "Remove all keywords",
                            "deleteAllConfirmation": Object {
                              "cancelButtonLabel": "No",
                              "confirmButtonLabel": "Yes",
                              "confirmationMessage": "Are you sure you want to delete all keywords?",
                              "confirmationTitle": "Delete all",
                            },
                            "nameColumn": "Keyword",
                            "reorderColumn": "Reorder keywords",
                          },
                        },
                        "row": Object {
                          "locale": Object {
                            "deleteHint": "Remove this keyword",
                            "deleteRecordConfirmation": Object {
                              "cancelButtonLabel": "No",
                              "confirmButtonLabel": "Yes",
                              "confirmationMessage": "Are you sure you want to delete this keyword?",
                              "confirmationTitle": "Delete keyword",
                            },
                            "moveDownHint": "Move keyword down the order",
                            "moveUpHint": "Move keyword up the order",
                          },
                        },
                      }
                    }
                    maxCount={10}
                    name="fez_record_search_key_keywords"
                    searchKey={
                      Object {
                        "order": "rek_keywords_order",
                        "value": "rek_keywords",
                      }
                    }
                  />
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                  xs={12}
                >
                  <ForwardRef(Typography)>
                    Internal Notes (admin)
                  </ForwardRef(Typography)>
                  <Field
                    component={[Function]}
                    fullWidth={true}
                    label="Internal Notes (admin)"
                    multiline={true}
                    name="internalNotes"
                    placeholder="Optionally enter internal notes"
                    richEditorId="internalNotes"
                    rows={5}
                  />
                </ForwardRef(Grid)>
              </ForwardRef(Grid)>
            </StandardCard>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          container={true}
          spacing={2}
        >
          <ForwardRef(Grid)
            item={true}
            sm={true}
            xs={false}
          />
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              data-analyticsid="cancel-community"
              data-testid="cancel-community"
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Cancel and return to the homepage
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              data-analyticsid="submit-community"
              data-testid="submit-community"
              fullWidth={true}
              variant="contained"
            >
              Add community
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </form>
  </ConfirmDiscardFormChanges>
</StandardPage>
`;

exports[`Community form should display successfull submission screen 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Add a missing community
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <span />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
                data-testid="standard-card-community-details"
                id="standard-card-community-details"
              >
                <div
                  class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
                >
                  <div
                    class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                  >
                    <h3
                      class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                      data-testid="standard-card-community-details-header"
                      id="standard-card-community-details-header"
                    >
                      Community details
                    </h3>
                  </div>
                </div>
                <div
                  class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                  data-analyticsid="standard-card-community-details-content"
                  data-testid="standard-card-community-details-content"
                  id="standard-card-community-details-content"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                    >
                      <field
                        disabled="false"
                        is="mock"
                        label="Title of community"
                        name="rek_title"
                        required="true"
                      />
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                    >
                      <field
                        disabled="false"
                        is="mock"
                        label="Community description"
                        name="rek_description"
                        required="true"
                      />
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                      >
                        Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                      </p>
                      <field
                        disabled="false"
                        is="mock"
                        name="fez_record_search_key_keywords"
                      />
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                      >
                        Internal Notes (admin)
                      </p>
                      <field
                        disabled="false"
                        is="mock"
                        label="Internal Notes (admin)"
                        name="internalNotes"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <div
                data-testid="alert"
                style="margin-top: 5px;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container css-1pzs6xa-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-cyocdy-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-1k6h6af-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item alert-icon css-sco6ic-MuiGrid-root"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
                          data-testid="DoneIcon"
                          focusable="false"
                          id="done-icon"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true alert-text css-1ux0ax1-MuiGrid-root"
                      >
                        <b>
                          Success - 
                        </b>
                        New work has been saved successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-true css-1vknvy4-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
                data-analyticsid="cancel-community"
                data-testid="cancel-community"
                tabindex="0"
                type="button"
              >
                Cancel and return to the homepage
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
                data-analyticsid="submit-community"
                data-testid="submit-community"
                tabindex="0"
                type="button"
              >
                Add community
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Community form should not ask when redirecting from form with data after successful submit 1`] = `
<StandardPage
  title="Add a missing community"
>
  <ConfirmDiscardFormChanges
    dirty={true}
    submitSucceeded={true}
  >
    <form>
      <NavigationDialogBox
        when={false}
      />
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <ForwardRef(Grid)
            item={true}
            xs={12}
          >
            <StandardCard
              help={Object {}}
              title="Community details"
            >
              <ForwardRef(Grid)
                container={true}
                spacing={3}
              >
                <ForwardRef(Grid)
                  item={true}
                  xs={12}
                >
                  <Field
                    autoFocus={true}
                    component={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "propTypes": Object {
                          "FormHelperTextProps": [Function],
                          "InputLabelProps": [Function],
                          "InputProps": [Function],
                          "SelectProps": [Function],
                          "autoComplete": [Function],
                          "autoFocus": [Function],
                          "children": [Function],
                          "className": [Function],
                          "classes": [Function],
                          "color": [Function],
                          "defaultValue": [Function],
                          "disabled": [Function],
                          "error": [Function],
                          "fullWidth": [Function],
                          "help": [Function],
                          "helperText": [Function],
                          "id": [Function],
                          "inputProps": [Function],
                          "inputRef": [Function],
                          "label": [Function],
                          "margin": [Function],
                          "maxRows": [Function],
                          "minRows": [Function],
                          "multiline": [Function],
                          "name": [Function],
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "placeholder": [Function],
                          "required": [Function],
                          "rows": [Function],
                          "select": [Function],
                          "size": [Function],
                          "sx": [Function],
                          "textFieldId": [Function],
                          "type": [Function],
                          "value": [Function],
                          "variant": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    fullWidth={true}
                    label="Title of community"
                    name="rek_title"
                    placeholder="Type a title for this community"
                    required={true}
                    textFieldId="rek-title"
                    type="text"
                    validate={
                      Array [
                        [Function],
                      ]
                    }
                  />
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                  xs={12}
                >
                  <Field
                    component={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "propTypes": Object {
                          "FormHelperTextProps": [Function],
                          "InputLabelProps": [Function],
                          "InputProps": [Function],
                          "SelectProps": [Function],
                          "autoComplete": [Function],
                          "autoFocus": [Function],
                          "children": [Function],
                          "className": [Function],
                          "classes": [Function],
                          "color": [Function],
                          "defaultValue": [Function],
                          "disabled": [Function],
                          "error": [Function],
                          "fullWidth": [Function],
                          "help": [Function],
                          "helperText": [Function],
                          "id": [Function],
                          "inputProps": [Function],
                          "inputRef": [Function],
                          "label": [Function],
                          "margin": [Function],
                          "maxRows": [Function],
                          "minRows": [Function],
                          "multiline": [Function],
                          "name": [Function],
                          "onBlur": [Function],
                          "onChange": [Function],
                          "onFocus": [Function],
                          "placeholder": [Function],
                          "required": [Function],
                          "rows": [Function],
                          "select": [Function],
                          "size": [Function],
                          "sx": [Function],
                          "textFieldId": [Function],
                          "type": [Function],
                          "value": [Function],
                          "variant": [Function],
                        },
                        "render": [Function],
                      }
                    }
                    fullWidth={true}
                    label="Community description"
                    multiline={true}
                    name="rek_description"
                    placeholder="Type a description of this community."
                    required={true}
                    rows={5}
                    textFieldId="rek-description"
                    validate={
                      Array [
                        [Function],
                      ]
                    }
                  />
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                  xs={12}
                >
                  <ForwardRef(Typography)>
                    Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                  </ForwardRef(Typography)>
                  <Field
                    ListEditorForm={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": [Function],
                      }
                    }
                    component={
                      Object {
                        "$$typeof": Symbol(react.memo),
                        "compare": null,
                        "type": [Function],
                      }
                    }
                    listEditorId="rek-keywords"
                    locale={
                      Object {
                        "form": Object {
                          "locale": Object {
                            "addButtonLabel": "Add",
                            "id": "keywords-input",
                            "inputFieldHint": "Type keywords",
                            "inputFieldLabel": "Keywords",
                          },
                        },
                        "header": Object {
                          "locale": Object {
                            "deleteAll": "Remove all keywords",
                            "deleteAllConfirmation": Object {
                              "cancelButtonLabel": "No",
                              "confirmButtonLabel": "Yes",
                              "confirmationMessage": "Are you sure you want to delete all keywords?",
                              "confirmationTitle": "Delete all",
                            },
                            "nameColumn": "Keyword",
                            "reorderColumn": "Reorder keywords",
                          },
                        },
                        "row": Object {
                          "locale": Object {
                            "deleteHint": "Remove this keyword",
                            "deleteRecordConfirmation": Object {
                              "cancelButtonLabel": "No",
                              "confirmButtonLabel": "Yes",
                              "confirmationMessage": "Are you sure you want to delete this keyword?",
                              "confirmationTitle": "Delete keyword",
                            },
                            "moveDownHint": "Move keyword down the order",
                            "moveUpHint": "Move keyword up the order",
                          },
                        },
                      }
                    }
                    maxCount={10}
                    name="fez_record_search_key_keywords"
                    searchKey={
                      Object {
                        "order": "rek_keywords_order",
                        "value": "rek_keywords",
                      }
                    }
                  />
                </ForwardRef(Grid)>
                <ForwardRef(Grid)
                  item={true}
                  xs={12}
                >
                  <ForwardRef(Typography)>
                    Internal Notes (admin)
                  </ForwardRef(Typography)>
                  <Field
                    component={[Function]}
                    fullWidth={true}
                    label="Internal Notes (admin)"
                    multiline={true}
                    name="internalNotes"
                    placeholder="Optionally enter internal notes"
                    richEditorId="internalNotes"
                    rows={5}
                  />
                </ForwardRef(Grid)>
              </ForwardRef(Grid)>
            </StandardCard>
          </ForwardRef(Grid)>
          <ForwardRef(Grid)
            item={true}
            xs={12}
          >
            <Alert
              allowDismiss={false}
              customIcon={null}
              customType={null}
              disableAlertClick={false}
              dismissTitle="Click to dismiss this alert"
              message="New work has been saved successfully."
              showLoader={false}
              title="Success"
              type="done"
              wiggle={null}
            />
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          container={true}
          spacing={2}
        >
          <ForwardRef(Grid)
            item={true}
            sm={true}
            xs={false}
          />
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              data-analyticsid="cancel-community"
              data-testid="cancel-community"
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Cancel and return to the homepage
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              data-analyticsid="submit-community"
              data-testid="submit-community"
              fullWidth={true}
              variant="contained"
            >
              Add community
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </form>
  </ConfirmDiscardFormChanges>
</StandardPage>
`;

exports[`Community form should render form 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Add a missing community
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <form>
        <div>
          <span
            class="MuiBox-root css-0"
            data-testid="confirmDialogBox"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
                data-testid="standard-card-community-details"
                id="standard-card-community-details"
              >
                <div
                  class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
                >
                  <div
                    class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                  >
                    <h3
                      class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                      data-testid="standard-card-community-details-header"
                      id="standard-card-community-details-header"
                    >
                      Community details
                    </h3>
                  </div>
                </div>
                <div
                  class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                  data-analyticsid="standard-card-community-details-content"
                  data-testid="standard-card-community-details-content"
                  id="standard-card-community-details-content"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                    >
                      <field
                        disabled="false"
                        is="mock"
                        label="Title of community"
                        name="rek_title"
                        required="true"
                      />
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                    >
                      <field
                        disabled="false"
                        is="mock"
                        label="Community description"
                        name="rek_description"
                        required="true"
                      />
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                      >
                        Add up to 10 individual keywords, or a pipe separated list, that describe the content of the thesis. (eg. one|two|three)
                      </p>
                      <field
                        disabled="false"
                        is="mock"
                        name="fez_record_search_key_keywords"
                      />
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
                      >
                        Internal Notes (admin)
                      </p>
                      <field
                        disabled="false"
                        is="mock"
                        label="Internal Notes (admin)"
                        name="internalNotes"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-true css-1vknvy4-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
                data-analyticsid="cancel-community"
                data-testid="cancel-community"
                tabindex="0"
                type="button"
              >
                Cancel and return to the homepage
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-auto css-pr9bjb-MuiGrid-root"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
                data-analyticsid="submit-community"
                data-testid="submit-community"
                tabindex="0"
                type="button"
              >
                Add community
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Community form should render success panel 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Add a missing community
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-community-added-successfully"
            id="standard-card-community-added-successfully"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-community-added-successfully-header"
                  id="standard-card-community-added-successfully-header"
                >
                  Community added successfully
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-community-added-successfully-content"
              data-testid="standard-card-community-added-successfully-content"
              id="standard-card-community-added-successfully-content"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
              >
                Your new community was created successfully.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Return to the homepage
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth css-1duotrm-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Add another community
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
